# carbonscope

./: .commitmsg  .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
alembic/: env.py
api/: __init__.py  auth.py  config.py  database.py  deps.py  limiter.py  logging_config.py  main.py  middleware.py  models.py  schemas.py
carbonscope/: protocol.py  scoring.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  ONBOARDING.md  SECURITY.md
frontend/: .env.production.example  .env.staging.example  next.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
k8s/: README.md  backend.yaml  configmap.yaml  cronjob-backup.yaml  frontend.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  postgres.yaml  redis.yaml  resource-quota.yaml  secrets.yaml
neurons/: miner.py  validator.py
nginx/: nginx.conf
scripts/: run_miner.sh  run_validator.sh
tests/: conftest.py  test_ai_routes.py  test_audit_routes.py  test_auth_api.py  test_benchmarks_service.py  test_billing_alerts_marketplace.py  test_carbon_api.py  test_company_api.py  test_concurrency.py  test_coverage_gaps.py  test_data_export.py  test_e2e_security.py  test_generator.py  test_middleware_and_crud.py  test_miner.py  test_new_routes.py  test_pdf_export.py  test_phase13_14_hardening.py  test_phase1_security.py  test_phase21_coverage.py  (+21 more)
(+184 files in other folders)
